tests/machine/x/scala/values_builtin.scala
// Generated by Mochi compiler v0.10.26 on 2025-07-16T17:43:10Z
object values_builtin {
  case class M(a: Int, b: Int, c: Int)

  def main(args: Array[String]): Unit = {
    val m = M(a = 1, b = 2, c = 3)
    println(m.values.toList)
  }
}
